--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,14 @@ body{
     align-items: center;
 }
 
+#fixed-menu{
+    display: none;
+}
+
+#fixed-absolute{
+    display: none;
+}
+
 #header{
     nav{
         padding: 25px 25px;
@@ -462,6 +470,85 @@ body{
 }
 
 @media only screen and (max-width: 545px){
+    #fixed-menu{
+        position: fixed;
+        bottom: 5%;
+        right: 5%;
+        display: block;
+        z-index: 60;
+        background-color: $color2;
+        padding: 15px;
+        padding-bottom: 10px;
+        
+        border-radius: 50%;
+        box-shadow: 0 0 5px 10px rgba(0,0,0,0.2);
+        animation-name: menu;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+        #fixed-logo{
+            width: 30px;
+            height: 30px;
+        }
+        #fixed-close{
+            width: 30px;
+            height: 30px;
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 100;
+            opacity: 0;
+        }
+        
+    }
+    #fixed-absolute{
+        position: fixed;
+        bottom: 18%;
+        right: 5.5%;
+        display: block;
+        width: 80%;
+        z-index: 66;
+        visibility: hidden;
+        opacity: 0;
+        transition: all .3s ease-in-out;
+        ul{
+            background-color: $color1;
+            border: 2px solid $color2;
+            border-radius: 15px;
+            padding: 10px 0;
+            li{
+                list-style: none;
+                padding: 10px 20px;
+                a{
+                    text-decoration: none;
+                    color: $color2;
+                    display: flex;
+                    align-items: center;
+                    font-size: 20px;
+                    img{
+                        width: 25px;
+                        height: 25px;
+                        margin-right: 5px;
+                    }
+                    .ig{
+                        width: 26px;
+                        height: 26px;
+                    }
+                    .icq{
+                        width: 23px;
+                        height: 23px;
+                        margin-left: 2px;
+                        margin-right: 6px;
+                    }
+                    .gmail{
+                        width: 23px;
+                        height: 23px;
+                    }
+                }
+            }
+        }
+    }
     #section4{
         background-color: $color1;
         padding: 40px 0;
@@ -593,5 +680,17 @@ body{
                 overflow: hidden;
                 }
         }
+    }
+}
+
+@keyframes menu{
+    0%{
+        opacity: 0.5;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0.5;
     }
 }
